Assignment-01/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Assignment-01
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=c2450b4d5f06206370adb5b3ad258ed3cd574f3bda7adbb3
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=c2450b4d5f06206370adb5b3ad258ed3cd574f3bda7adbb3
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook Assignment 01.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 90633fa8-5477-482f-ba09-7fa13c1f94cd
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 90633fa8-5477-482f-ba09-7fa13c1f94cd
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /GDP dataset/Countries with GDP.txt
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Saving file at /Assignment 01.ipynb
[NotebookApp | INFO] Starting buffering for 90633fa8-5477-482f-ba09-7fa13c1f94cd:07fafc96a507434c9e38065819a0d4d2
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 90633fa8-5477-482f-ba09-7fa13c1f94cd
